--- a/components/site-header/style.css
+++ b/components/site-header/style.css
@@ -11,7 +11,7 @@
     width:100%;
     border-bottom:1px solid #fff;
     transition:all 0.3s;
-    z-index: 300;
+    z-index: 99;
     transform:translate3d(0, 1px, 0);
 }
 .site-header.headspace--fixed {
